Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-60889

Assert in locks with sandbox on some linux versions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.9.0
    • 5.9.0 Beta 4
    • WebEngine
    • None
    • 0a51ebb3a (134-based-refactor)

      On some linux distros we get asserts when using the sandbox. It appears to be due to pthread functions returning 35 or EDEADLOCK usually to indicate we are recursively locking a non-recursive mutex.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes