Stop erronous deadlock errors in sandboxed debug mode

On some platforms we get error 35 (deadlock avoided) on sandboxed
machines when extra checking is enabled in the pthread locks. These
appears to be false positives as no deadlocks occur when checking is
disabled.

For now we disable the checking to fix debug builds on Linux.

Task-number: QTBUG-60889
Change-Id: Ic5bcde246597e06fc920a496f2ad9a1ae1298808
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>